--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,4 +46,225 @@ body {
 .glyphicon{
     color: orangered;
 }
+
+.animate-enter {
+    -webkit-animation: enter 600ms cubic-bezier(0.390, 0.575, 0.565, 1.000);
+    animation: enter 600ms cubic-bezier(0.390, 0.575, 0.565, 1.000);
+    display: block;
+    position: relative;
+}
+@-webkit-keyframes enter {
+    from {
+        opacity: 0;
+        height: 0px;
+        top: -50px;
+        left: -5px;
+    }
+    10% {
+        left: 45px;
+    }
+    20% {
+        top: 40px;
+    }
+    30% {
+        left: -35px;
+    }
+    40% {
+        top: -30px;
+    }
+    50% {
+        left: 25px;
+    }
+    60% {
+        top: 20px;
+    }
+    70% {
+        left: -15px;
+    }
+    80% {
+        top: -10px;
+    }
+    90% {
+        left: 5px;
+    }
+    to {
+        opacity: 1;
+        height: 30px;
+        left: 0px;
+        top: 0px;
+    }
+}
+@keyframes enter {
+    from {
+        opacity: 0;
+        height: 0px;
+        top: -50px;
+        left: -5px;
+    }
+    10% {
+        left: 45px;
+    }
+    20% {
+        top: 40px;
+    }
+    30% {
+        left: -35px;
+    }
+    40% {
+        top: -30px;
+    }
+    50% {
+        left: 25px;
+    }
+    60% {
+        top: 20px;
+    }
+    70% {
+        left: -15px;
+    }
+    80% {
+        top: -10px;
+    }
+    90% {
+        left: 5px;
+    }
+    to {
+        opacity: 1;
+        height: 30px;
+        left: 0px;
+        top: 0px;
+    }
+}
+
+/*.animate-leave {*/
+    /*-webkit-animation: leave 600ms cubic-bezier(0.390, 0.575, 0.565, 1.000);*/
+    /*animation: leave 600ms cubic-bezier(0.390, 0.575, 0.565, 1.000);*/
+    /*display: block;*/
+    /*position: relative;*/
+/*}*/
+/*@-webkit-keyframes leave {*/
+    /*to {*/
+        /*opacity: 0;*/
+        /*height: 0px;*/
+        /*top: -50px;*/
+        /*left: -5px;*/
+    /*}*/
+    /*90% {*/
+        /*left: 45px;*/
+    /*}*/
+    /*80% {*/
+        /*top: 40px;*/
+    /*}*/
+    /*70% {*/
+        /*left: -35px;*/
+    /*}*/
+    /*60% {*/
+        /*top: -30px;*/
+    /*}*/
+    /*50% {*/
+        /*left: 25px;*/
+    /*}*/
+    /*40% {*/
+        /*top: 20px;*/
+    /*}*/
+    /*30% {*/
+        /*left: -15px;*/
+    /*}*/
+    /*20% {*/
+        /*top: -10px;*/
+    /*}*/
+    /*10% {*/
+        /*left: 5px;*/
+    /*}*/
+    /*from {*/
+        /*opacity: 1;*/
+        /*height: 30px;*/
+        /*left: 0px;*/
+        /*top: 0px;*/
+    /*}*/
+/*}*/
+/*@keyframes leave {*/
+    /*to {*/
+        /*opacity: 0;*/
+        /*height: 0px;*/
+        /*top: -50px;*/
+        /*left: -5px;*/
+    /*}*/
+    /*90% {*/
+        /*left: 45px;*/
+    /*}*/
+    /*80% {*/
+        /*top: 40px;*/
+    /*}*/
+    /*70% {*/
+        /*left: -35px;*/
+    /*}*/
+    /*60% {*/
+        /*top: -30px;*/
+    /*}*/
+    /*50% {*/
+        /*left: 25px;*/
+    /*}*/
+    /*40% {*/
+        /*top: 20px;*/
+    /*}*/
+    /*30% {*/
+        /*left: -15px;*/
+    /*}*/
+    /*20% {*/
+        /*top: -10px;*/
+    /*}*/
+    /*10% {*/
+        /*left: 5px;*/
+    /*}*/
+    /*from {*/
+        /*opacity: 1;*/
+        /*height: 30px;*/
+        /*left: 0px;*/
+        /*top: 0px;*/
+    /*}*/
+/*}*/
+
+.ui-view-container {
+    position: relative;
+    height: 65px;
+}
+
+[ui-view].ng-enter, [ui-view].ng-leave {
+    position: absolute;
+    left: 0;
+    right: 0;
+    -webkit-transition:all .5s ease-in-out;
+    -moz-transition:all .5s ease-in-out;
+    -o-transition:all .5s ease-in-out;
+    transition:all .5s ease-in-out;
+}
+
+[ui-view].ng-enter {
+    opacity: 0;
+    -webkit-transform:scale3d(0.5, 0.5, 0.5);
+    -moz-transform:scale3d(0.5, 0.5, 0.5);
+    transform:scale3d(0.5, 0.5, 0.5);
+}
+
+[ui-view].ng-enter-active {
+    opacity: 1;
+    -webkit-transform:scale3d(1, 1, 1);
+    -moz-transform:scale3d(1, 1, 1);
+    transform:scale3d(1, 1, 1);
+}
+
+[ui-view].ng-leave {
+    opacity: 1;
+    -webkit-transform:translate3d(0, 0, 0);
+    -moz-transform:translate3d(0, 0, 0);
+    transform:translate3d(0, 0, 0);
+}
+
+[ui-view].ng-leave-active {
+    opacity: 0;
+    -webkit-transform:translate3d(100px, 0, 0);
+    -moz-transform:translate3d(100px, 0, 0);
+    transform:translate3d(100px, 0, 0);
+}
 /*created by bryce groesbeck*/
