--- a/stylesheet.css
+++ b/stylesheet.css
@@ -53,88 +53,88 @@ body {
     display: block;
     position: relative;
 }
-@-webkit-keyframes enter {
-    from {
-        opacity: 0;
-        height: 0px;
-        top: -50px;
-        left: -5px;
-    }
-    10% {
-        left: 45px;
-    }
-    20% {
-        top: 40px;
-    }
-    30% {
-        left: -35px;
-    }
-    40% {
-        top: -30px;
-    }
-    50% {
-        left: 25px;
-    }
-    60% {
-        top: 20px;
-    }
-    70% {
-        left: -15px;
-    }
-    80% {
-        top: -10px;
-    }
-    90% {
-        left: 5px;
-    }
-    to {
-        opacity: 1;
-        height: 30px;
-        left: 0px;
-        top: 0px;
-    }
-}
-@keyframes enter {
-    from {
-        opacity: 0;
-        height: 0px;
-        top: -50px;
-        left: -5px;
-    }
-    10% {
-        left: 45px;
-    }
-    20% {
-        top: 40px;
-    }
-    30% {
-        left: -35px;
-    }
-    40% {
-        top: -30px;
-    }
-    50% {
-        left: 25px;
-    }
-    60% {
-        top: 20px;
-    }
-    70% {
-        left: -15px;
-    }
-    80% {
-        top: -10px;
-    }
-    90% {
-        left: 5px;
-    }
-    to {
-        opacity: 1;
-        height: 30px;
-        left: 0px;
-        top: 0px;
-    }
-}
+/*@-webkit-keyframes enter {*/
+    /*from {*/
+        /*opacity: 0;*/
+        /*height: 0px;*/
+        /*top: -50px;*/
+        /*left: -5px;*/
+    /*}*/
+    /*10% {*/
+        /*left: 45px;*/
+    /*}*/
+    /*20% {*/
+        /*top: 40px;*/
+    /*}*/
+    /*30% {*/
+        /*left: -35px;*/
+    /*}*/
+    /*40% {*/
+        /*top: -30px;*/
+    /*}*/
+    /*50% {*/
+        /*left: 25px;*/
+    /*}*/
+    /*60% {*/
+        /*top: 20px;*/
+    /*}*/
+    /*70% {*/
+        /*left: -15px;*/
+    /*}*/
+    /*80% {*/
+        /*top: -10px;*/
+    /*}*/
+    /*90% {*/
+        /*left: 5px;*/
+    /*}*/
+    /*to {*/
+        /*opacity: 1;*/
+        /*height: 30px;*/
+        /*left: 0px;*/
+        /*top: 0px;*/
+    /*}*/
+/*}*/
+/*@keyframes enter {*/
+    /*from {*/
+        /*opacity: 0;*/
+        /*height: 0px;*/
+        /*top: -50px;*/
+        /*left: -5px;*/
+    /*}*/
+    /*10% {*/
+        /*left: 45px;*/
+    /*}*/
+    /*20% {*/
+        /*top: 40px;*/
+    /*}*/
+    /*30% {*/
+        /*left: -35px;*/
+    /*}*/
+    /*40% {*/
+        /*top: -30px;*/
+    /*}*/
+    /*50% {*/
+        /*left: 25px;*/
+    /*}*/
+    /*60% {*/
+        /*top: 20px;*/
+    /*}*/
+    /*70% {*/
+        /*left: -15px;*/
+    /*}*/
+    /*80% {*/
+        /*top: -10px;*/
+    /*}*/
+    /*90% {*/
+        /*left: 5px;*/
+    /*}*/
+    /*to {*/
+        /*opacity: 1;*/
+        /*height: 30px;*/
+        /*left: 0px;*/
+        /*top: 0px;*/
+    /*}*/
+/*}*/
 
 /*.animate-leave {*/
     /*-webkit-animation: leave 600ms cubic-bezier(0.390, 0.575, 0.565, 1.000);*/
