changed location of task button.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@ body {
     color: red;
 }
 
-#router{
+#router {
     margin: 0 auto;
 }
 
@@ -43,7 +43,7 @@ body {
     text-align: center;
 }
 
-.glyphicon{
+.glyphicon {
     color: orangered;
 }
 
@@ -54,9 +54,23 @@ body {
     position: relative;
 }
 
-.textColor{
+.textColor {
     color: whitesmoke;
     font-size: 20px;
+    margin-top: 25px;
+    text-decoration: underline;
+}
+
+.textTask {
+    color: whitesmoke;
+    font-size: 20px;
+
+}
+
+#reqText {
+    color: whitesmoke;
+    font-size: 12px;
+
 }
 
 .ui-view-container {
@@ -68,37 +82,38 @@ body {
     position: absolute;
     left: 0;
     right: 0;
-    -webkit-transition:all .5s ease-in-out;
-    -moz-transition:all .5s ease-in-out;
-    -o-transition:all .5s ease-in-out;
-    transition:all .5s ease-in-out;
+    -webkit-transition: all .5s ease-in-out;
+    -moz-transition: all .5s ease-in-out;
+    -o-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
 }
 
 [ui-view].ng-enter {
     opacity: 0;
-    -webkit-transform:scale3d(0.5, 0.5, 0.5);
-    -moz-transform:scale3d(0.5, 0.5, 0.5);
-    transform:scale3d(0.5, 0.5, 0.5);
+    -webkit-transform: scale3d(0.5, 0.5, 0.5);
+    -moz-transform: scale3d(0.5, 0.5, 0.5);
+    transform: scale3d(0.5, 0.5, 0.5);
 }
 
 [ui-view].ng-enter-active {
     opacity: 1;
-    -webkit-transform:scale3d(1, 1, 1);
-    -moz-transform:scale3d(1, 1, 1);
-    transform:scale3d(1, 1, 1);
+    -webkit-transform: scale3d(1, 1, 1);
+    -moz-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
 }
 
 [ui-view].ng-leave {
     opacity: 1;
-    -webkit-transform:translate3d(0, 0, 0);
-    -moz-transform:translate3d(0, 0, 0);
-    transform:translate3d(0, 0, 0);
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
 }
 
 [ui-view].ng-leave-active {
     opacity: 0;
-    -webkit-transform:translate3d(100px, 0, 0);
-    -moz-transform:translate3d(100px, 0, 0);
-    transform:translate3d(100px, 0, 0);
+    -webkit-transform: translate3d(100px, 0, 0);
+    -moz-transform: translate3d(100px, 0, 0);
+    transform: translate3d(100px, 0, 0);
 }
+
 /*created by bryce groesbeck*/
